<resources>
    <string name="app_name">Whereis</string>

    <string name="hintPathToLoginServer">Сервер авторизации</string>
    <string name="hintPathToJsonSaveServer">Сервер обработки данных</string>
    <string name="action_about">About</string>
    <string name="hintEmail">Email</string>
    <string name="hintPassword">Password</string>
    <string name="btnLogin">login</string>
    <string name="btnLogout">Logout</string>
    <string name="btnRepeat">Repeat</string>
    <string name="providerGps">GPS</string>
    <string name="providerNetwork">Network</string>
    <string name="locationSettings">Location settings</string>
    <string name="strBtnLocationOn">Location is ON</string>
    <string name="strBtnLocationOFF">Location is OFF</string>
    <string name="chooseServerName">Default server</string>
    <string name="version">Version 1.0.1</string>
    <string name="web">http://...</string>
    <string name="copyright">&#169; Copyright 2017</string>
    <string name="latitude">Your current Latitude:</string>
    <string name="longitude">Your current Longitude:</string>

    <string name="currentServer">Current Server</string>
    <string name="btnCancel">Cancel</string>
    <string name="chooseServer">Choose Server</string>


    <string name="btnSaveSettingHideMenu">Save setting</string>
    <string name="title_activity_user_area">UserAreaActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_about">AboutActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="email">email</string>
    <string name="todo5">TODO</string>
    <string name="your_current_longitude">Your current Longitude:</string>
    <string name="your_current_latitude">Your current Latitude:</string>
    <string name="lon">lon</string>
    <string name="lat">lat</string>
</resources>
