<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/logo_screen"
        android:contentDescription="@string/todo1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/currentServer"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp" />

    <TextView
        android:id="@+id/textViewServerSelected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/chooseServerName"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp" />

    <Button
        android:id="@+id/btnSelectServer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:onClick="onClickSelectServer"
        android:text="@string/chooseServer"
        android:textColor="@color/bg_main" />

    <Button
        android:id="@+id/btnSaveSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:text="@string/btnSaveSettingHideMenu"
        android:textColor="@color/bg_main" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:text="@string/btnCancel"
        android:textColor="@color/bg_main" />

</LinearLayout>