<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_user_area"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="alex.kushnerov.whereis.activity.UserAreaActivity"
    tools:showIn="@layout/app_bar_user_area">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:src="@drawable/logo_screen" />


    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="280dp"
        android:alpha="0.7"
        android:background="@drawable/gradient_location_back">

    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:id="@+id/imageLocation"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_alignBottom="@+id/constraintLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:src="@drawable/location"
        android:contentDescription="@string/todo3" />

    <TextView
        android:id="@+id/tVLongtitudeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/constraintLayout"
        android:layout_alignLeft="@+id/imageLogo"
        android:layout_alignStart="@+id/imageLogo"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="27dp"
        android:layout_marginStart="27dp"
        android:text="@string/longitude"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textSize="15sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="373dp" />

    <TextView
        android:id="@+id/tVLatitudeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tVLongtitudeText"
        android:layout_alignStart="@+id/tVLongtitudeText"
        android:layout_alignTop="@+id/constraintLayout"
        android:layout_marginTop="20dp"
        android:text="@string/latitude"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textSize="15sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="336dp" />

    <TextView
        android:id="@+id/tVLongtitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tVLongtitudeText"
        android:layout_alignBottom="@+id/tVLongtitudeText"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:layout_toRightOf="@+id/tVLongtitudeText"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="251dp"
        tools:layout_editor_absoluteY="373dp"
        android:layout_toEndOf="@+id/tVLongtitudeText" />

    <TextView
        android:id="@+id/tVLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tVLatitudeText"
        android:layout_alignBottom="@+id/tVLatitudeText"
        android:layout_alignLeft="@+id/tVLongtitude"
        android:layout_alignStart="@+id/tVLongtitude"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="251dp"
        tools:layout_editor_absoluteY="336dp" />
</RelativeLayout>
